[package]
name = "caesar"
version = "1.0.0"
edition = "2021"
authors = ["Caesar Economic System"]
description = "Economic backend for HyperMesh - Token management, rewards, staking"
license = "MIT OR Apache-2.0"

[lib]
name = "caesar"
path = "src/lib.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

# Web framework for API endpoints
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database and storage
sqlx = { workspace = true }
redis = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Blockchain integration
ethers = "2.0"
primitive-types = "0.12"
reqwest = { workspace = true }

# Security
argon2 = "0.5"
jwt-simple = "0.12"

# Economics and mathematics
rust_decimal = { version = "1.35", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.35"
num-traits = "0.2"

# Time and utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
rand = "0.8"
hex = "0.4"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# Performance monitoring

[features]
default = ["production"]
production = ["redis-cache", "postgres-db"]
development = ["sqlite-db"]
redis-cache = []
postgres-db = []
